i wasn't really happy with how the ndof integration was done so i made some changes.
the new behavior of it is that you can rotate and pan the view at the same time.
i also added a new option to the ndof menu letting you pick turntable/trackball independently of the mouse viewport navigation style.
and another option to change the rotation sensitivity separate from the panning since the scale of the scene might need you to change the translation speed much higher but the rotation should always work the same.
holding shift + moving the ndof does just as before locking it to panning
holding ctrl + moving will lock it to only rotation
and holding no keys while moving will do both at the same time.
Description
Description
Event Timeline
Comment Actions
Hi Fredrik,
We have complaints in our tracker about this new method, and I admit it's very hard to use now. Feels like drunk driving to me.
I tried to understand what goes on - long thread you can find here:
http://projects.blender.org/tracker/index.php?func=detail&aid=32806&group_id=9&atid=498